# blender_v8

./: README.md
intern/cycles/blender/: blender_python.cpp
source/blender/blenkernel/intern/: scene.c
source/blender/blenlib/: BLI_callbacks.h
source/blender/draw/: CMakeLists.txt
source/blender/draw/engines/armory/: Krom.cpp  Krom.h  armory_engine.c  armory_engine.h
source/blender/draw/engines/armory/Deployment/release/linux/: libcrypto.so.1.1  libssl.so.1.1
source/blender/draw/engines/armory/Deployment/release/macos/: libv8_libbase.dylib  libv8_libplatform.dylib
source/blender/draw/engines/armory/Kore/Backends/Audio2/DirectSound/Sources/Kore/: DirectSound.cpp
source/blender/draw/engines/armory/Kore/Backends/Graphics4/OpenGL/Sources/Kore/: OpenGL.cpp
source/blender/draw/engines/armory/Kore/Backends/System/Linux/Sources/Kore/: Display_Xinerama.cpp  System.cpp
source/blender/draw/engines/armory/Kore/Backends/System/Linux/Sources/Kore/Input/: Mouse.cpp
source/blender/draw/engines/armory/Kore/Backends/System/Microsoft/Sources/Kore/: Mutex.cpp
source/blender/draw/engines/armory/Kore/Backends/System/Windows/Sources/Kore/: System.cpp
source/blender/draw/engines/armory/Kore/Backends/System/macOS/Sources/Kore/: System.mm
source/blender/draw/engines/armory/Kore/Sources/Kore/: Error.cpp  Log.cpp  System.h
source/blender/draw/engines/armory/Kore/Sources/Kore/Input/: Mouse.cpp
source/blender/draw/engines/armory/Kore/Tools/kraffiti/: kraffiti-linux32  kraffiti-linuxarm
source/blender/draw/engines/armory/Kore/Tools/krafix/: krafix-linux32  krafix-linuxarm  krafix-osx
source/blender/draw/engines/armory/V8/Libraries/macos/release/: libv8_libbase.dylib  libv8_libplatform.dylib
source/blender/draw/engines/armory/V8/Libraries/win32/release/: v8_libbase.dll.lib  v8_libplatform.dll.lib
source/blender/draw/engines/armory/V8/include/: v8-debug.h  v8-inspector-protocol.h  v8-inspector.h  v8-platform.h  v8-profiler.h  v8-version.h  v8.h  v8config.h
source/blender/draw/engines/armory/V8/include/libplatform/: libplatform.h  v8-tracing.h
source/blender/draw/engines/armory/V8/include_win32/: v8-util.h  v8-version-string.h
source/blender/draw/intern/: draw_manager.c
source/blender/makesdna/: DNA_scene_types.h
source/blender/makesrna/intern/: rna_ID.c  rna_space.c
source/blender/python/intern/: bpy_app_handlers.c
source/blender/render/intern/source/: render_result.c
source/blender/windowmanager/intern/: wm_draw.c
